--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
     <title>Police Shootings</title>
-    <!-- Get the leaflet.js library and stylesheet -->
+    <!-- Get the leaflet.js library and stylesheet -->n
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link rel="stylesheet" href="css/main.css"/>
@@ -14,9 +14,9 @@
   <body>
     <div id="container" style="width:500px; height:500px;"></div>
     <script>
-      
+    
     	// This is where you should execute your drawMap function // 
-
+      drawMap();
     </script>
-  </body>
+</body>
 </html>
