--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         drawMap();
       </script>
       <footer>
-        <h5><i>The content is not intended to be disrespectful. Viewer discretion is advised.</i></h5>
+        <h5><i>Content is not intended to be disrespectful. Viewer discretion is advised.</i></h5>
+        <h5>(source: <a href="http://regressing.deadspin.com/deadspin-police-shooting-database-update-were-still-go-1627414202">crowdsourced police shootings data from Deadspin)</a></h5>
       </footer>
     </main>
 </body>
